--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -3,6 +3,7 @@ on: push
 jobs:
   lint:
     runs-on: ubuntu-latest
+    using: 'node18'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -12,6 +13,7 @@ jobs:
         run: npm run lint
   test:
     runs-on: ubuntu-latest
+    using: 'node18'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
