--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -3,20 +3,26 @@ on: push
 jobs:
   lint:
     runs-on: ubuntu-latest
-    using: 'node18'
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 18
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
       - name: Install deps
         run: npm ci
       - name: Lint
         run: npm run lint
   test:
     runs-on: ubuntu-latest
-    using: 'node18'
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 18
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
       - name: Install deps
         run: npm ci
       - name: Test
