--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Use Node.js 18
         uses: actions/setup-node@v4
         with:
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Use Node.js 18
         uses: actions/setup-node@v4
         with:
