--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,13 +17,16 @@ jobs:
   test:
     needs: [lint]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [16,18,20]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Use Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: ${{ matrix.version }}
       - name: Install deps
         run: npm ci
       - name: Test
